增加种植疫情虫子表单，并为虫子绑定种植者

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,8 @@
     <string name="单项选择题">单项选择题</string>
     <string name="疫情点">疫情点</string>
     <string name="添加描述">添加描述</string>
-    <string name="no_thank_you">没有什么想说的</string>
+    <string name="no_thank_you">有没有其他想说的</string>
+    <string name="请描述一下你的症状">请描述一下你的症状</string>
+    <string name="什么时候开始出现病状">什么时候开始出现病状</string>
+    <string name="选择时间">选择时间</string>
 </resources>
