种虫记录捉虫记录第一阶段

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="请描述一下你的症状">请描述一下你的症状</string>
     <string name="什么时候开始出现病状">什么时候开始出现病状</string>
     <string name="选择时间">选择时间</string>
+    <string name="种虫记录">种虫记录</string>
+    <string name="捉虫记录">捉虫记录</string>
 </resources>
