登录界面加入身份选择；在查看疫情点页面加入权限控制，现在只有医生用户可以看到变更等级按钮。当前有关身份判断的值均写死为普通用户

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="一万米">一万米内</string>
     <string name="五千米">五千米内</string>
     <string name="五百米">五百米内</string>
+    <string name="医生身份">当前登录身份为：医生</string>
+    <string name="用户身份">当前登录身份为：普通用户</string>
 </resources>
